refactor(layout): 优化页面布局和菜单功能
- 调整了多个页面的 header、footer 和 iframe 样式
-优化了导航菜单的显示和隐藏逻辑
- 统一了部分样式，提高了页面的一致性- 添加了点击空白区域隐藏菜单的功能

--- a/map-2.html
+++ b/map-2.html
@@ -13,7 +13,7 @@
     <link href="resources/css/private/map-2/iframe.css" rel="stylesheet">
 </head>
 <body>
-<header data-text-color="#000">
+<header data-bg-color="rgba(0, 196, 244, 0.5)" data-text-color="#000">
     <button aria-label="Toggle navigation" class="hamburger">
         <span></span>
         <span></span>
