--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Blue-Millennium | 模组服轨交线路图</title>
+    <title>Blue-Millennium | 轨交线路图</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="resources/pics/public/BM-Logo.ico" rel="icon">
     <link href="resources/css/public/menu.css" rel="stylesheet">
@@ -10,10 +10,9 @@
     <script src="resources/js/public/some-common-functions.js"></script>
     <script src="resources/js/public/menu.js"></script>
     <script src="resources/js/public/foot.js"></script>
-    <link href="resources/css/private/map-2/iframe.css" rel="stylesheet">
 </head>
 <body>
-<header data-text-color="#000">
+<header data-bg-color="rgba(0, 196, 244, 0.5)" data-text-color="#000">
     <button aria-label="Toggle navigation" class="hamburger">
         <span></span>
         <span></span>
@@ -24,7 +23,6 @@
         </ul>
     </nav>
 </header>
-<iframe src="https://map2origin.blue-millennium.fun" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
