--- a/update.html
+++ b/update.html
@@ -30,7 +30,7 @@
     <h1>更新日志 - 自2025年5月起</h1>
     <div class="update-log animated-log" id="update-log"></div>
 </div>
-<footer class="fixed" id="footer">
+<footer id="footer">
 </footer>
 </body>
 </html>
