--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="resources/js/private/index/join-us-button.js"></script>
 </head>
 <body>
-<header>
+<header data-bg-color="clear">
     <button aria-label="Toggle navigation" class="hamburger">
         <span></span>
         <span></span>
