--- a/about-us.html
+++ b/about-us.html
@@ -33,15 +33,14 @@
         <div class="title"><span>欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span>服务器！</span>
         </div>
     </section>
-    <!--    <h2 class="text-blue">我们的故事，才刚刚开始！</h2>-->
     <section class="hero">
         <div class="title"><span>关于我们</span></div>
     </section>
     <section class="content">
-        <p>Blue-Millennium不再以任何游戏作为主题，自由与创造将作为服务器的主题。</p>
-        <span class="notUseAnymore">Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月7日正式开始初期运营。</span>
+        <p>Blue-Millennium不以任何游戏作为主题，自由与创造将作为服务器的主题。</p>
         <p>
-            <span class="secret">偷偷告诉你哦，我们在2024年5月4日就已经成立了我们现在的前身，当时还叫南湖心理咨询室呢。</span>
+            <span class="secret">偷偷告诉你哦，我们在2024年5月4日就已经成立了我们现在的前身，当时还叫南湖心理咨询室呢。
+                2024年5月7日-2025年4月30日，我们以蔚蓝档案为主题，自2025年5月1日起，不再以任何游戏为主题。</span>
     </section>
     <section class="team">
         <h2>我们的团队</h2>
